# SolDashboard

./: .env.example  .replit  SETUP_INSTRUCTIONS.md  __init__.py  api.py  db.js  ftp_uploader.py  get_pumpfun.php  get_status.php  get_webcam.php  index.html  models.py  object_storage.py  package-lock.json  package.json  pyproject.toml  replit.md  schema.sql  server.js  server.py
public/: index.html
